# nube

./: .gitignore  CMakeLists.txt  nube.qml
examples/: nube-config.sdl  nube.conf
nube/: __main__.py
nube/ui/: core.py  platform.py
nube/ui/qml/Nube/Widgets/: Clock.qml  Panel.qml  StyledText.qml  qmldir
src/: CMakeLists.txt  builtin_converters.c  builtin_source_providers.c  builtin_sources.c  builtin_widget_types.c  config.c  config.h  converters.c  converters.h  default_sources.c  drawing.c  drawing.h  linux-info.c  main.c  nube.c  panel.c  panel.h  source_providers.c  source_providers.h  sources.c  sources.h  sys-info.h  util.c  util.h  widgets.c  widgets.h
